force-app/main/default/objects/PHSS_Material__c/PHSS_Material__c.object-meta.xml
<CustomObject>
    <label>PHSS Material</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>