force-app/main/default/objects/PHSS_Material__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instructor Bulletin</fullName>
            </value>
            <value>
                <fullName>Instructor Materials</fullName>
            </value>
            <value>
                <fullName>Supporting Materials</fullName>
            </value>
            <value>
                <fullName>Participant Materials</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>