force-app/main/default/objects/PHSS_Material__c/fields/Content_Tags__c.field-meta.xml
<CustomField>
    <fullName>Content_Tags__c</fullName>
    <label>Content Tags</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>