force-app/main/default/objects/PHSS_Material__c/fields/ContentDocumentID__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentID__c</fullName>
    <label>ContentDocumentID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>