force-app/main/default/objects/PHSS_Material__c/fields/ContentVersionContentURL__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionContentURL__c</fullName>
    <label>ContentVersionContentURL</label>
    <type>Url</type>
</CustomField>