force-app/main/default/objects/PHSS_Material__c/fields/ContentVersionFileType__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionFileType__c</fullName>
    <label>ContentVersionFileType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>