force-app/main/default/objects/PHSS_Material__c/fields/ContentVersionID__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionID__c</fullName>
    <label>ContentVersionID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>