force-app/main/default/objects/PHSS_Material__c/fields/ContentVersionLink__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionLink__c</fullName>
    <formula>IF( is_S3_Content__c ,
S3_URL__c ,

$Label.PHSS_IC_Community_URL_Domain + $Label.PHSS_IC_Community_URL_Content_Version_Servlet + ContentVersionID__c
)</formula>
    <label>ContentVersionLink</label>
    <type>Text</type>
</CustomField>