force-app/main/default/objects/PHSS_Material__c/fields/ContentVersionVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionVersionNumber__c</fullName>
    <label>ContentVersionVersionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>