force-app/main/default/objects/PHSS_Material__c/fields/ContentWorkspaceID__c.field-meta.xml
<CustomField>
    <fullName>ContentWorkspaceID__c</fullName>
    <label>ContentWorkspaceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>