force-app/main/default/objects/PHSS_Material__c/fields/Disable_Community_Preview__c.field-meta.xml
<CustomField>
    <fullName>Disable_Community_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be checked on all records that point to non-standard PDF files ( like the Adobe Presenter PDF files ) as well as any really large files that would take a long time to load into the previewer.</description>
    <label>Disable Community Preview</label>
    <type>Checkbox</type>
</CustomField>