force-app/main/default/objects/PHSS_Material__c/fields/is_S3_Content__c.field-meta.xml
<CustomField>
    <fullName>is_S3_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is S3 Content</label>
    <type>Checkbox</type>
</CustomField>