force-app/main/default/objects/PHSS_Material__c/fields/isCandidateMaterial__c.field-meta.xml
<CustomField>
    <fullName>isCandidateMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCandidateMaterial</label>
    <type>Checkbox</type>
</CustomField>