force-app/main/default/objects/PHSS_Material__c/fields/PHSS_Program__c.field-meta.xml
<CustomField>
    <fullName>PHSS_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PHSS Program</label>
    <referenceTo>PHSS_Program__c</referenceTo>
    <relationshipLabel>PHSS Materials (PHSS Program)</relationshipLabel>
    <relationshipName>PHSS_Materials_Children</relationshipName>
    <type>Lookup</type>
</CustomField>