force-app/main/default/objects/PHSS_Material__c/fields/S3_URL__c.field-meta.xml
<CustomField>
    <fullName>S3_URL__c</fullName>
    <label>S3 URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>