force-app/main/default/objects/PHSS_Material__c/fields/Short_Tags__c.field-meta.xml
<CustomField>
    <fullName>Short_Tags__c</fullName>
    <description>This is a copy of the long text tags area to allow filter searchs.  This must be populated by a dump and load of the Content Tags field</description>
    <label>Short Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>